--- a/src/app/core/components/side-menu/side-menu.component.html
+++ b/src/app/core/components/side-menu/side-menu.component.html
@@ -1,10 +1,10 @@
 <mat-nav-list>
-  <a mat-list-item [routerLink]="['/']">
-    <mat-icon>home</mat-icon>
-    <span>Home</span>
+  <a mat-list-item [routerLink]="['/movies']">
+    <mat-icon>movie</mat-icon>
+    <span>Movies</span>
   </a>
-  <a mat-list-item [routerLink]="['/about']">
-    <mat-icon>info</mat-icon>
-    <span>About</span>
+  <a mat-list-item [routerLink]="['/admin']">
+    <mat-icon>admin</mat-icon>
+    <span>Admin</span>
   </a>
 </mat-nav-list>
