--- a/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
@@ -1,5 +1,7 @@
-<ng-container *ngIf="movies$ | async as movies">
-  <mat-table [dataSource]="movies">
+<!-- <div><mat-spinner *ngIf="dataSource.isLoading$ | async"></mat-spinner></div> -->
+
+<section>
+  <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="title">
       <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
       <mat-cell *matCellDef="let movie">{{ movie.title }}</mat-cell>
@@ -18,7 +20,9 @@
     </ng-container>
 
     <ng-container matColumnDef="rating">
-      <mat-header-cell *matHeaderCellDef>Rating</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header
+        >Rating</mat-header-cell
+      >
       <mat-cell *matCellDef="let movie">{{ movie.rating }}</mat-cell>
     </ng-container>
 
@@ -45,4 +49,7 @@
       *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
-</ng-container>
+  <mat-paginator
+    [pageSize]="15"
+    [pageSizeOptions]="[10, 15, 25, 100]"></mat-paginator>
+</section>
