--- a/projects/movies-frontend/src/app/features/admin/shared/edit-movie-dialog/edit-movie-dialog.component.html
+++ b/projects/movies-frontend/src/app/features/admin/shared/edit-movie-dialog/edit-movie-dialog.component.html
@@ -17,8 +17,8 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Rating</mat-label>
-      <input matInput type="number" formControlName="rating" />
+      <mat-label>Tags</mat-label>
+      <input matInput placeholder="tag1, tag2, tag3" formControlName="tags" />
     </mat-form-field>
   </form>
 </mat-dialog-content>
