--- a/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
@@ -10,7 +10,7 @@
   </mat-card-header>
   <mat-card-content>
     <p>Release Date: {{ movie.releaseDate }}</p>
-    <p>Rating: {{ movie.rating }}</p>
+    <p>Rating: {{ movie.tags }}</p>
   </mat-card-content>
   <mat-card-actions>
     <button
