feat(tags): add tags entity

--- a/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
@@ -40,7 +40,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header>Tags</mat-header-cell>
       <mat-cell *matCellDef="let movie">
         <mat-chip-listbox>
-          <mat-chip *ngFor="let tag of movie.tags">{{ tag }}</mat-chip>
+          <mat-chip *ngFor="let tag of movie.tags">{{ tag.name }}</mat-chip>
         </mat-chip-listbox>
       </mat-cell>
     </ng-container>
