--- a/projects/movies-frontend/src/app/core/components/side-menu/side-menu.component.html
+++ b/projects/movies-frontend/src/app/core/components/side-menu/side-menu.component.html
@@ -1,10 +1,10 @@
 <mat-nav-list>
-  <a mat-list-item [routerLink]="['/movies']">
+  <a mat-list-item [routerLink]="['/movies']" routerLinkActive="active">
     <mat-icon>movie</mat-icon>
     <span>Movies</span>
   </a>
-  <a mat-list-item [routerLink]="['/admin']">
-    <mat-icon>admin</mat-icon>
+  <a mat-list-item [routerLink]="['/admin']" routerLinkActive="active">
+    <mat-icon>fix</mat-icon>
     <span>Admin</span>
   </a>
 </mat-nav-list>
