--- a/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
@@ -1,34 +1,48 @@
-<mat-card *ngFor="let movie of displayedMovies$ | async" class="movie-card">
-  <img
-    mat-card-image
-    [src]="movie.poster"
-    alt="{{ movie.title }} poster"
-    (error)="onImageError($event)" />
-  <mat-card-header>
-    <mat-card-title>{{ movie.title }}</mat-card-title>
-    <mat-card-subtitle>Directed by: {{ movie.director }}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <p>Release Date: {{ movie.releaseDate }}</p>
-    <p>
-      Tags:
-      <mat-chip-listbox>
-        <mat-chip *ngFor="let tag of movie.tags">{{ tag }}</mat-chip>
-      </mat-chip-listbox>
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button
-      mat-raised-button
-      color="primary"
-      [routerLink]="['/movies/details', movie.id]">
-      View Details
-    </button>
-  </mat-card-actions>
-</mat-card>
-<mat-paginator
-  [length]="(movies$ | async)?.length"
-  [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 20]"
-  (page)="onPageChange($event)">
-</mat-paginator>
+<section>
+  <div class="filter-container">
+    <mat-form-field appearance="outline">
+      <mat-label>Filter by tag</mat-label>
+      <input
+        matInput
+        [formControl]="tagFilterControl"
+        placeholder="Enter tag name" />
+    </mat-form-field>
+  </div>
+
+  <mat-card
+    *ngFor="let movie of displayedMovies$ | async; trackBy: trackById"
+    class="movie-card">
+    <img
+      mat-card-image
+      [src]="movie.poster"
+      alt="{{ movie.title }} poster"
+      (error)="onImageError($event)" />
+    <mat-card-header>
+      <mat-card-title>{{ movie.title }}</mat-card-title>
+      <mat-card-subtitle>Directed by: {{ movie.director }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Release Date: {{ movie.releaseDate }}</p>
+      <p>
+        Tags:
+        <mat-chip-listbox>
+          <mat-chip *ngFor="let tag of movie.tags">{{ tag.name }}</mat-chip>
+        </mat-chip-listbox>
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button
+        mat-raised-button
+        color="primary"
+        [routerLink]="['/movies/details', movie.id]">
+        View Details
+      </button>
+    </mat-card-actions>
+  </mat-card>
+  <mat-paginator
+    [length]="(movies$ | async)?.length"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 20]"
+    (page)="onPageChange($event)">
+  </mat-paginator>
+</section>
