feat(visual): add pie chart

--- a/projects/movies-frontend/src/app/core/components/side-menu/side-menu.component.html
+++ b/projects/movies-frontend/src/app/core/components/side-menu/side-menu.component.html
@@ -7,4 +7,7 @@
     <mat-icon>fix</mat-icon>
     <span>Admin</span>
   </a>
+  <a mat-list-item routerLink="/visual" routerLinkActive="active"
+    >Tag Statistics</a
+  >
 </mat-nav-list>
