feat(movie-db): add movies-db suggestions

--- a/projects/movies-frontend/src/app/features/admin/shared/admin-navigation/admin-navigation.component.html
+++ b/projects/movies-frontend/src/app/features/admin/shared/admin-navigation/admin-navigation.component.html
@@ -8,4 +8,5 @@
     >Dashboard</a
   >
   <a routerLink="/admin/create" routerLinkActive="active">Create Movie</a>
+  <a routerLink="/admin/add-bulk" routerLinkActive="active">Create Bulk</a>
 </nav>
