--- a/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
@@ -41,3 +41,22 @@
 
   <button mat-raised-button color="primary" type="submit">Create Movie</button>
 </form>
+<div *ngIf="suggestions.length > 0">
+  <h3>Movie Suggestions</h3>
+  <mat-list>
+    <div *ngFor="let movie of suggestions">
+      <h4>{{ movie.title }}</h4>
+      <!-- <p matLine>Director: {{ movie.director }}</p>
+      <p matLine>Release Date: {{ movie.releaseDate | date }}</p>
+      <p matLine>
+        Tags:
+        <mat-chip *ngFor="let tag of movie.tags">
+          {{ tag }}
+        </mat-chip>
+      </p> -->
+      <button mat-mini-fab color="primary" (click)="useSuggestion(movie)">
+        Use
+      </button>
+    </div>
+  </mat-list>
+</div>
