--- a/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-dashboard/movie-dashboard.component.html
@@ -50,7 +50,10 @@
     <ng-container matColumnDef="poster">
       <mat-header-cell *matHeaderCellDef>Poster</mat-header-cell>
       <mat-cell *matCellDef="let movie">
-        <img [src]="movie.poster" alt="Movie Poster" width="50" />
+        <img
+          [src]="'http://localhost:3000/' + movie.poster"
+          alt="Movie Poster"
+          width="50" />
       </mat-cell>
     </ng-container>
 
