--- a/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
@@ -27,7 +27,7 @@
     </mat-card-header>
     <mat-card-content>
       <p data-test="movie-release-date">
-        Release Date: {{ movie.releaseDate }}
+        Release Date: {{ movie.releaseDate | date }}
       </p>
       <p>
         Tags:
