--- a/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.scss
+++ b/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.scss
@@ -1,10 +1,74 @@
-img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+:root {
+  --primary-color: #c2185b;
+  --accent-color: #607d8b;
+  --background-color: #eceff1;
 }
-mat-card {
-  display: inline-block;
-  margin: 16px;
-  width: 300px;
+
+.movie-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px;
+  background-color: var(--background-color);
+}
+
+.movie-info {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+  width: 100%;
+}
+
+.movie-poster {
+  flex: 0 0 40%;
+  margin-bottom: 24px;
+}
+
+.movie-poster img {
+  max-width: 100%;
+  height: auto;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.movie-content {
+  flex: 0 0 58%;
+  padding: 16px;
+}
+
+.movie-content h1 {
+  font-size: 2rem;
+  margin-bottom: 16px;
+  color: var(--primary-color);
+}
+
+.movie-content h2 {
+  font-size: 1.5rem;
+  margin-bottom: 16px;
+  color: var(--accent-color);
+}
+
+.movie-content p {
+  margin-bottom: 4px;
+}
+
+//TODO: Rewview styles here
+.review-item {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+.add-review-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.add-review-field {
+  flex: 1;
+  margin-right: 1em;
+}
+
+.submit-button {
+  margin-top: 1em;
 }
