--- a/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.scss
+++ b/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.scss
@@ -7,6 +7,8 @@
   flex: 0 0 calc(33% - 1rem);
   margin: 0.5rem;
   box-sizing: border-box;
+  position: relative;
+
 
   @media (max-width: 767px) {
     flex-basis: calc(50% - 1rem);
@@ -19,4 +21,11 @@
 
 img {
   max-width: 300px;
+}
+
+.menu-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  z-index: 1;
 }
