refactor(bulk): change button & add description to mapper

--- a/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
@@ -42,5 +42,5 @@
       </mat-menu>
     </mat-card>
   </div>
-  <button (click)="addMovies()">Add Movies</button>
+  <button (click)="addMovies()"mat-raised-button color="primary">Add Movies</button>
 </div>
