--- a/projects/movies-frontend/src/app/app.component.html
+++ b/projects/movies-frontend/src/app/app.component.html
@@ -1,11 +1,4 @@
+<app-header></app-header>
 <main>
-  <app-header (toggleSidenav)="sidenav.toggle()"></app-header>
-  <mat-drawer-container>
-    <mat-drawer #sidenav mode="over">
-      <app-side-menu></app-side-menu>
-    </mat-drawer>
-    <mat-drawer-content>
-      <router-outlet></router-outlet>
-    </mat-drawer-content>
-  </mat-drawer-container>
+  <router-outlet></router-outlet>
 </main>
