--- a/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
@@ -73,7 +73,7 @@
       </div>
       <div class="submit-button">
         <button
-          class="bg-blue-500 text-white py-2 px-4 rounded-md"
+          class="bg-primary-500 text-white py-2 px-4 rounded-md"
           (click)="addReview()"
         >
           Add Review
