--- a/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
+++ b/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="mt-4">
       <button
-        class="bg-blue-500 text-white py-2 px-4 rounded-md"
+        class="bg-primary-500 text-white py-2 px-4 rounded-md"
         [routerLink]="['/movies/details', movie.id]"
       >
         View Details
